[package]
name = "mazerunner"
version = "0.1.0"
edition = "2024"
default-run = "mazerunner"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_dylib = "0.16.1"

bitvec = "1.0.1"
image = "0.25.8"
rand = "0.9.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
